# nhsf

./: Cargo.toml  Dockerfile  changelog.md  readme.md
.github/workflows/: draft_nightly.yml  publish_image.yml  release_image.yml
example/: conf.yml  readme.md
example/conf_dir/static/: style.css
example/conf_dir/templates/: dir.html
example/dir_exposed/repo/: nanocl_0.3.0_amd64.deb
example/dir_exposed/shared/: conf.yml
src/: cli.rs  config.rs  error.rs  main.rs  models.rs  services.rs
