[package]
name = "nhsf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nhsf"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
ntex = { version = "0.6.5", features = ["tokio"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
ntex-files = "*"
chrono = "0.4.24"
liquid = { version = "0.26.1", default-features = false, features = ["stdlib"] }

[patch.crates-io]
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras" }
